--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -37,7 +37,7 @@ are testing the regime of small momentum transfers, where the EFT approximation 
 Collider experiments, though, are sensitive to large momentum transfers: this is a regime where careful 
 treatment is necessary since the condition of applicability of the EFT may not hold~\footnote{
 Furthermore, mapping EFT results from high to low momentum requires particular care for some of the operators, 
-see Ref.~\cite{D'Eramo:2014aba} for a thorough discussion.}
+see Ref.~\cite{D'Eramo:2014aba} for a thorough discussion.}.
 The correct approach is to assess the applicability of EFT, not abandon it.
 
 %As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
@@ -108,7 +108,6 @@ in powers of $\Qtr^2/\mMed^2$, truncating at lowest order, and combining the rem
 (connected to the scale of the interaction $\Lambda$ in the literature).
 For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the notation of~\cite{Goodman:2010ku} for the EFT limit),
 this corresponds to setting
- 
 \be
 \frac{\gDM \gq}{Q_{\rm tr}^2-\mMed^2}=-\frac{\gDM \gq}{\mMed^2}\left(1+\frac{Q^2_{\rm tr}}{\mMed^2}+ \mathcal{O} \left(\frac{Q^4_{\rm tr}}{\mMed^4}\right)\right) \simeq -\frac{1}{{\Mstar^2}},
 \ee
@@ -136,7 +135,6 @@ For the example D5-like operator, $\sigma \propto \Mstar^{-4}$, and there is a s
 if the original limit is based on a simple cut-and-count procedure.
 %CD: I would keep it
 Defining $\sigma_{\rm EFT}^{\rm cut}$ as the cross section truncated such that all events pass the condition $\sqrt{\gDM \gq} \Mstar^{\rm rescaled} > \Qtr$, we have
- 
 \be
 \Mstar^{\rm rescaled} = \left(\frac{\sigma_{\rm EFT}}{\sigma_{\rm EFT}^{\rm cut}(\Mstar^{\rm rescaled})}\right)^{1/4} \Mstar^{\rm original},
 \ee
@@ -189,7 +187,6 @@ a procedure to extract model independent and consistent bounds within the EFT
 that can be applied to any effective Lagrangian describing the interactions between the DM and the SM.
 This procedure provides conservative limits that can be directly reinterpreted in any completion of the EFT.
 The condition ensuring that the EFT approximation is appropriate is:
-
 \begin{equation}
 \label{Ecm<Mcut}
 E_\text{cm}<M_\text{cut}\,.
@@ -220,7 +217,6 @@ A further consideration applicable to EFT operators at hadron colliders
 is the potential violation of unitarity.  An analysis of the operator
 $\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
 provides the limit:
-
 \be
 \Mstar > \sqrt{s} \sqrt{ {\sqrt{3} \over 4 \pi} \beta(s) },
 \ee
@@ -250,7 +246,6 @@ A further consideration applicable to EFT operators at hadron colliders
 is the potential violation of unitarity.   An analysis of the operator
 $\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
 provides the limit:
-
 \be
 \Mstar > \sqrt{s} \sqrt{ {\sqrt{3} \over 4 \pi} \beta(s) },
 \ee
@@ -306,7 +301,7 @@ determined that to fully reproduce the kinematics of a contact
 interaction and have no remaining dependence on the presence of a resonance
 that is as narrow as the choice made in Section~\ref{sub:parameter_scan_monojet} (\gq = 0.25 and \gDM = 1),
 the mediator mass needs to be at least 10 TeV. A comparison of the main kinematic variables for the \schannel vector 
-mediator model with a width of 0.1\mMed \footnote{The use of a fixed width rather than the minimal width is exclusive of these plots} 
+mediator model with a width of 0.1 \mMed~\footnote{The use of a fixed width rather than the minimal width is exclusive of these plots} 
 is shown in Fig.~\ref{fig:EFT_kinematics}.
 
 %CD: do we want to add more of the discussion here on why this happens? I would personally keep it short.
@@ -414,14 +409,14 @@ a good description of UV complete
 theories. This can be done using the ratio \Reft, which is defined
 as the fraction of events for which $\hat{s} > \Mcut^2$. 
 For large values of \Mcut, no events are thrown away in the truncation 
-procedure, and R=1. As \Mcut becomes smaller, eventually all events are thrown 
-away in the truncation procedure, i.e. $\Reft=0$, and the EFT gives no 
+procedure, and \Reft = 1. As \Mcut becomes smaller, eventually all events are thrown 
+away in the truncation procedure, i.e. \Reft = 0, and the EFT gives no 
 exclusion limits for the chosen acceptance.  
 
 We propose a rough scan over \Mcut, such that we find the values of \Mcut 
 for which \Reft ranges from 0.1 to 1. The analysis can then perform a scan over 
 several values of \Mcut, and show the truncated limit 
-for each one of them alongside the naive limit corresponding to \Reft=1. 
+for each one of them alongside the naive limit corresponding to \Reft = 1. 
 
 %When \Reft=0, there is no limit. When \Reft reaches 1, the truncated limit 
 %is identical to the original limit. (<== These last two sentences may be overkill. 
