some of Tristan's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@333 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -216,9 +216,9 @@ width. We forbid any further decays to other invisible particles of
 the Dark Sector that may increase the width or produce striking, visible signatures. 
 Studies within the Forum
 show that, for cut-and-count analyses, the kinematic distributions of
-many models, and therefore the sensitivity of the search, do not depend
+many models, and therefore the sensitivity of these searches, do not depend
 significantly on the mediator width, as long as the width remains smaller
-than the mass of the particle.
+than the mass of the particle and that narrow mediators are sufficiently light.
 
 The particle content of the models chosen as benchmarks is limited to
 one single kind of DM whose self-interactions are not relevant for LHC
