--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -100,7 +100,8 @@ In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in th
 This assumption motivates the study of final states involving $b$-quarks 
 as a complementary search to the $t\bar
 t$+DM models, to directly probe the $b$-quark coupling. 
-In addition to the example illustrated in Fig.~\ref{fig:TTbarPhi}, an example of such a model can be found in Ref.~\cite{Buckley:2014fba}.
+In addition to the example illustrated in Fig.~\ref{fig:TTbarPhi}, an example of such a model can be found in Ref.~\cite{Buckley:2014fba}
+and can be obtained by replacing top quarks with $b$ quarks in Fig.~\ref{fig:TTbarPhi}.
 Note that, because of the kinematics features of $b$ quark production relative
 to heavy $t$ quark production, a $b\bar b$+DM final state may only yield one
 experimentally visible $b$ quark, leading to a mono-$b$ signature in a model that conserves $b$ flavor.
