Added one sentence to introduction after LianTao's comments on V1
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@334 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -233,7 +233,7 @@ mediator particles), it is a starting point to prepare a set of
 distinct but complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
-\section{Choices of benchmarks considered in this report}
+\section{Choices of benchmarks considered in this report and parameter scan}
 
 %We have already said this above. 
 %carts in front of the horse?
@@ -273,6 +273,17 @@ in the high mediator mass limit. Results from EFT benchmarks should include the 
 the momentum transfer does not probe the scale of the interaction; whenever there is no model
 that allows a direct mapping between these two quantities, various options should be tested to 
 ensure a given fraction of events within the range of applicability of the EFT approach.
+
+This report does not quantitatively consider constraints 
+'external' to the MET+X analyses coming from
+the LHC experiments themselves, such as searches for mediators decays,
+when choosing the points to be scanned in the parameter space of the models. 
+The main reason for not doing so in this report 
+is the difficulty of incorporating these constraints in a rigorous quantitative way within
+the timescale of the Forum. However, even if the parameter scans
+and the searches are not optimized with those constraints in mind, 
+we intend to make all information available to the community to exploit
+the unique sensitivity of colliders to all possible Dark Matter signatures. 
 
 \section{Structure of this report}
 
