--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -5,16 +5,15 @@
 {$LastChangedBy$}
 \svnid{$Id$}
 
-Many theories of physics beyond the Standard Model predict the existence
-of a stable, neutral, weakly-interacting and massive particle that is
-a putative dark matter candidate.   In the following, we refer to such
+Dark matter\sidenote{Many theories of physics beyond the Standard Model predict the existence
+of stable, neutral, weakly-interacting and massive particles that are
+putative dark matter candidate. In the following, we refer to such
 matter as dark matter, even though the observation of such matter at a collider
 could only establish that it is neutral, weakly-interactive, massive and stable
-on the distance-scales of 10's of meters.
-Dark matter has not yet been observed in particle physics experiments, and
+on the distance-scales of tens of meters.} has not yet been observed in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions
 between dark matter and Standard Model particles.  If such
-interactions exist, dark matter particles could be produced
+interactions exist, particles of dark matter could be produced
 at the LHC. Since dark matter particles themselves do not produce signals
 in the LHC detectors, one way to observe them is when they are produced in association
 with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
@@ -27,49 +26,39 @@ Such reactions, which are
 observed at colliders as particles or jets recoiling against an invisible state, are
 called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, 
 where \MET is the missing transverse momentum observable in the detector.
-\Todo{CD: why singling out mono-Higgs?}
-This type of reaction includes the production of a Higgs boson that
-decays to pairs of dark matter particles.
 
-Early LHC Run-1 searches for \MET{}+X signatures at ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007} and CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004} employed
-a basis of contact interaction operators in 
-effective field theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to
-calculate the possible signals.
-\Todo{Check these references here}
-These particular EFTs assume that production of dark matter takes place through
-a contact interaction involving a quark-antiquark pair or two gluons, and
-two dark matter particles.  In this case,
-the missing
-energy distribution of the signal is determined
-by the nature and the mass of the dark
-matter particles and the Lorentz structure of the interaction, and only the
-overall production rate is a free parameter to be constrained or measured.
-Both experiments studied a variety
-of EFTs with different spin structures. Provided that the contact
-interaction approximation holds, these EFTs can also provide a
-straightforward way to compare the results from different collider
-searches with non-collider searches for dark matter.  
-From the time of their proposal, however, it was clear that,
- though the contact interactions provide interesting limits, 
- they are not always a good description of dark matter production 
- at the LHC in the regime of interest~\cite{Goodman:2010yf,Shoemaker:2011vi}. 
+Early LHC Run-1 searches for \MET{}+X signatures at
+ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007}
+and
+CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004}
+employed a basis of contact interaction operators in effective field
+theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to calculate the
+possible signals. %\Todo{Check these references here}
+These EFTs assume that production of dark matter takes place through a
+contact interaction involving a quark-antiquark pair, or two gluons,
+and two dark matter particles.  In this case, the missing energy
+distribution of the signal is determined by the nature and the mass of
+the dark matter particles and the Lorentz structure of the
+interaction. Only the overall production rate is a free parameter to
+be constrained or measured.  Provided that the contact interaction
+approximation holds, these EFTs provide a straightforward way to
+compare the results from different collider searches with non-collider
+searches for dark matter.  From the time of their proposal, however,
+it was clear that, though limits on the contact interaction operators
+provide useful information, they are not always a good description of
+dark matter production at the LHC in the regime of
+interest~\cite{Goodman:2010yf,Shoemaker:2011vi}.
 
-The interpretation of Tevatron~\cite{Aaltonen:2012jb} and Run-1 LHC searches
-as constraints on contact interactions
-provided results that were outside the range of applicability of the EFT
+The contact interaction interpretation of Tevatron~\cite{Aaltonen:2012jb} and Run-1 LHC searches
+provided results outside the range of applicability of the EFT
 description, requiring further study~\cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
-Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}\Todo{CD: How are those references chosen?}
+Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}
 of dark matter production were constructed, including particles and interactions beyond the SM.
 These models can be used consistently at LHC energies, and provide
 an extension to the EFT approach. 
 Many proposals for such models have emerged (see, for example
 Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:2013xka,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa,Bai:2012xg,Carpenter:2012rg,Bell:2012rg,Petrov:2013nia,Carpenter:2013xra}). 
-%TODO CD: MONSTERCITE! Probably should be split. 
-%SL: I think it's fine...
-These models introduce a new particle -- a mediator -- that allows
-interactions between SM and DM particles.
-In the limit of large mediator mass, these simplified models map onto
-EFT operators.
+These models introduce a new particle: a mediator of the interactions between SM and DM particles.
 %% that a contact
 %% interaction is often not the correct description for the signals to
 %% which the LHC is sensitive.
@@ -79,12 +68,8 @@ EFT operators.
 %theories).
 %Such particles can mediate reactions that produce dark matter
 %particles.
-If the mass of the mediator is small, the kinematics of the
-dark matter production can differ substantially from that due to a contact
-interaction, modifying limits and possibly requiring new search strategies.
-Appropriate simplified models can be used both to
-interpret Dark Matter searches at the LHC, and to guide the design of complementary
-search signatures.
+At the LHC, the kinematics of mono-X reactions occurring via a \tev-scale mediator can differ substantially from the prediction of the contact
+interaction. The mediator may also produce qualitatively different signals, such as decays back into Standard Model particles. Thus, appropriate simplified models are thus an important component of the design, optimization, and interpretation of dark matter searches at ATLAS and CMS.
 
 \section{The ATLAS/CMS Dark Matter Forum}
 
@@ -93,14 +78,13 @@ both ATLAS and CMS collaborations have held separate discussions with small grou
 theorists~\cite{Malik:2014ggr,Yavin:14092893}. 
 Another joint discussion was held at the DM@LHC workshop in Oxford, in 
 September 2014~\cite{DMatLHCProceedings}. 
-As discussed at the DM@LHC workshop, ATLAS and CMS organized a forum at the
-end of 2014, called the~\textit{ATLAS-CMS Dark
+Following the DM@LHC workshop, ATLAS and CMS organized a forum, called the~\textit{ATLAS-CMS Dark
 Matter Forum}, to form a consensus on the use of simplified models
 and EFTs for Run-2 with the participation of experts on
 theories of dark matter. This is the final report of that forum.
 
 One of the guiding principles of this report is to channel the efforts
-of the ATLAS and CMS collaborations towards a minimal set of dark
+of the ATLAS and CMS collaborations towards a minimal basis of dark
 matter models that should influence the design of the early Run-2
 searches. At the same time, a thorough survey of realistic collider
 signals of dark matter is a crucial input to the overall design of the
@@ -142,7 +126,7 @@ important to restrict the scope and timescale to the following:
 \section{Grounding Assumptions}
 
 We assume that interactions exist between Standard Model hadrons
-and whatever the particle that constitutes cosmological dark matter. If this
+and the particles that constitute cosmological dark matter. If this
 is not the case, then proton collisions will not produce dark matter
 particles, and dark matter will not scatter off nuclei in direct
 detection experiments.
@@ -160,34 +144,35 @@ dominant role in the opening stages of an LHC discovery. The latter
 assumption focuses our work on early LHC searches, where small
 kinematic differences between models will not matter in a discovery
 scenario, and with the imminent re-start of the LHC our report relies
-heavily on a large body of existing theoretical work which made this
-assumption. Different types of dark matter particles will typically
-give similar results.
-Some exceptions exist:  the choice of Dirac fermions forbids some
+heavily on a large body of existing theoretical work which assumed Dirac fermionic dark matter. 
+
+Different spins of dark matter particles will typically
+give similar results. Some exceptions exist. For example, the choice of Dirac fermions forbids some
 processes that are allowed for Majorana fermions~\cite{Goodman:2010yf}.
-Aside from this, the cases
-of Dirac or Majorana fermions or scalars produce only minor changes
-in the kinematic distributions of the visible particle, especially
-when considering cut-and-count\sidenote{Cut-and-count refers to an analysis
+Aside from these, adjusting the choice of Dirac or Majorana fermions or scalars will produce only minor changes
+in the kinematic distributions of the visible particle and is expected to have little effect
+on cut-and-count\sidenote{Cut-and-count refers to an analysis
 that applies a certain event selection and checks the inclusive number of events which pass. 
 This is to be contrasted with a shape analysis, which compares the distribution of events.} analysis. Thus the choice of Dirac
-fermion dark matter is deemed sufficient for the benchmarks aiding the
-design of the upcoming Run-2 searches. Nevertheless, a more complete
-set of models will certainly be required upon a discovery; see
-e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva} for some
-studies of observables that may distinguish amongst these models.
+fermion dark matter should be sufficient as benchmarks for the upcoming Run-2 searches. 
 
-Simplified models are considered in depth within this report since a strength of collider experiments lies in the ability to
-study the mediator, not just the DM. A discovery of an
-anomalous \MET signature
-at the LHC would not uniquely imply discovery of dark matter, while at
-the same time discovery of an anomalous and annually-modulated signal
-in a direct-detection experiment would leave unanswered many questions
-about the nature of the interaction that could be resolved by the simultaneous discovery
-of a new mediator particle. 
-Collider, direct, and indirect detection searches provide complementary ways to
-approach this problem, and it is in this spirit that our focus is on
-the mediator. We systematically explore the basic possibilities for
+% Should LHC searches uncover a signal consistent with these models, a much more exhaustive Nevertheless, a more complete
+% set of models will certainly be required upon a discovery. See
+% Refs.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva} for some
+% studies of observables that may distinguish amongst these models.
+
+One advantage of collider experiments lies in their ability to study
+and possibly characterize the mediator. A discovery of an anomalous
+\MET signature at the LHC would not uniquely imply discovery of dark
+matter, while at the same time discovery of an anomalous and
+annually-modulated signal in a direct-detection experiment would leave
+unanswered many questions about the nature of the interaction that
+could be resolved by the simultaneous discovery of a new mediator
+particle.  Collider, direct, and indirect detection searches provide
+complementary ways to approach this problem, and it is in this spirit
+that much of our focus is on the mediator.
+
+We systematically explore the basic possibilities for
 mediators of various possible spins and couplings.
 All models considered are assumed to produce a signature with pairs of dark matter particles.
 Though more varied and
@@ -242,14 +227,15 @@ it leads to benchmarks that are easily comparable across channels.
 %two. In the EFT approach, the mass scale of the mediator is assumed
 %to be large compared to the typical momentum involved in the production
 %of dark matter.  
-Contact interaction operators have been outlined as a complete series of theoretical
+Contact interaction operators have been outlined as basis set of theoretical
 building blocks representing possible types of interactions between SM and DM particles
 in~\cite{Goodman:2010ku}. The approach followed by LHC searches (see e.g. Refs.~\cite{Khachatryan:2014rra,Aad:2015zva} 
 for the most recent jet+\MET{} Run-1 searches with the 8 TeV dataset) 
 so far has been to simulate only a prioritized set of the possible operators with distinct kinematics
-for the interpretation of the constraints obtained, and provide results to be reinterpreted in terms of the other operators.
+for the interpretation of the constraints obtained, and provide results that may be reinterpreted in terms of the other operators.
 This report intends to follow this strategy, firstly focusing on simplified models that allow the exploration 
-of scenarios where the mediating scale is not as large.  
+of scenarios where the mediating scale is not as large.  In the limit of large mediator mass, the simplified models map onto
+the EFT operators.
 %because the EFT approach, viable for the
 %other types of dark matter searches, breaks down at the LHC. Another
 %way of viewing this problem is that any BSM model of dark matter
@@ -304,11 +290,7 @@ simplified models leading to mono-boson signatures
 and contact interaction operators are considered. 
 Chapter \ref{sec:EFTValidity} is devoted to the treatment of the presentation of results for the benchmark
 models from contact interaction operators. Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. Chapter \ref{chapter:conclusions} concludes the report.
-Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
-should be included in the results of experimental searches to allow for further reinterpretation. 
-%The Appendices also collect information about the implementation of the
-%models in event generator tools, as well as tables of expected cross sections.
-%%This could be saved for monotop
+
 The technical implementation and further models that can be studied
 beyond early searches are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
 For these models, either the implementation could not be fully developed by the time of this report,
@@ -316,4 +298,10 @@ or some of the grounding assumptions were not fully met.
 Some of these models have been used in previous ATLAS and CMS analyses and discussed thoroughly within the Forum. 
 They are therefore worth considering for further studies and for Run-2 searches, since they lead to unique \MET{}+X signatures 
 that are not produced by any other of the models included in this report. 
-%\fi
+
+Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
+should be included in the results of experimental searches to allow for further reinterpretation. 
+%The Appendices also collect information about the implementation of the
+%models in event generator tools, as well as tables of expected cross sections.
+%%This could be saved for monotop
+
