moved implementation appendix to chapter before EFT
also
- fixed title
- deleted pdf to save space


git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@336 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -88,8 +88,7 @@
 }
 \newcommand{\blankpage}{\newpage\hbox{}\thispagestyle{empty}\newpage}
 \makeatletter
-\title{Dark Matter Benchmark Models for Early LHC Run-2 Searches:
-	Report~of~the~ATLAS/CMS~Dark~Matter~Forum}
+\title{Dark Matter Benchmark Models for Early LHC Run-2 Searches:\\\noindent Report~of~the~ATLAS/CMS~Dark~Matter~Forum}
 \author{ATLAS+CMS Dark Matter Forum}
 \date{\today}
 \usepackage{titling}
@@ -141,6 +140,9 @@
 \label{subsec:EWSpecificModels}
 \input{tex/EWSpecificModels}
 
+\chapter{Implementation of Models}
+\label{app:MonojetLikeModels_Appendix}
+\input{tex/MonojetLikeModels_Appendix.tex}
 
 \chapter{Presentation of EFT results}
 \label{sec:EFTValidity} 
@@ -161,10 +163,6 @@
 %\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+\MET searches}{Appendix: Table of cross sections for  ttbar+\MET searches}}
 %\label{app:TTBar_Xsecs}
 %\input{tex/TTBar_Xsecs_Appendix.tex}
-
-\chapter{Appendix: Implementation of Models}
-\label{app:MonojetLikeModels_Appendix}
-\input{tex/MonojetLikeModels_Appendix.tex}
 
 \chapter{Appendix: Additional models for Dark Matter searches}
 \label{app:EWSpecificModels_Appendix}
