--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -18,8 +18,8 @@
 \sffamily
 {
   \Large
-  \fontsize{20}{24}\selectfont 
-  \smallcaps
+  \fontsize{18}{24}\selectfont 
+  % \smallcaps
   \@title
   %\@title
 }\\
