--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -22,7 +22,7 @@ the same benchmark parameters of the $t\bar t$ case could be chosen.
 
 \newthought{Implementation}
 There are some subtleties to the Monte Carlo simulation relevant for
-this case that are discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
+this case that are discussed in Section ~\ref{app:MonojetLikeModels_Appendix}.
 
 % Removing these plots as they won't make it last-minute. 
 %\Todo{[TODO: The following figures are placeholders for now and will be added later].  If these are supporting material for the MC generation, put in the appendix}.
