--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -7,7 +7,7 @@
 
 Dark matter\sidenote{Many theories of physics beyond the Standard Model predict the existence
 of stable, neutral, weakly-interacting and massive particles that are
-putative dark matter candidate. In the following, we refer to such
+putative dark matter candidates. In the following, we refer to such
 matter as dark matter, even though the observation of such matter at a collider
 could only establish that it is neutral, weakly-interactive, massive and stable
 on the distance-scales of tens of meters.} has not yet been observed in particle physics experiments, and
@@ -277,9 +277,6 @@ Chapter \ref{subsec:MonojetLikeModels} of the report is dedicated to simplified
 models with radiation of a hard object either from the initial state
 or from the mediator. These models produce primarily monojet signatures, 
 but should be considered for all \MET{}+X searches.
-Details of the implementation of these models in
-Monte Carlo generators are provided in
-Appendix \ref{app:MonojetLikeModels_Appendix}.
 %Chapter~\ref{subsec:DMHFModels} describes the specific details of the general models
 %for final states including heavy flavor quarks, leaving the implementation
 %details to appendix~\ref{app:TTBar_Xsecs}.  
@@ -288,6 +285,9 @@ recommendations and choices for final states specifically containing an electrow
 boson ($W/Z/\gamma/H$). In this case, both 
 simplified models leading to mono-boson signatures
 and contact interaction operators are considered. 
+Details of the implementation of the simplified models in
+Monte Carlo generators are provided in
+Chapter \ref{app:MonojetLikeModels_Appendix}.
 Chapter \ref{sec:EFTValidity} is devoted to the treatment of the presentation of results for the benchmark
 models from contact interaction operators. Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. Chapter \ref{chapter:conclusions} concludes the report.
 
