--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -28,7 +28,7 @@ from diagrams arising within these models are also discussed in this Chapter.
 
 The simplified model where a vector mediator is exchanged in the \schannel 
 is known to NLO accuracy in the case of DM pair production in association to one parton~\cite{Haisch:2013ata}. 
-All other models are currently known to leading order. Appendix~\ref{app:MonojetLikeModels_Appendix}
+All other models are currently known to leading order. Section~\ref{app:MonojetLikeModels_Appendix}
 details the recommended implementation of these models that
 have been used for the studies in this Chapter. A summary of the recommendation of the generation of this model
 is provided in Table~%\ref{tab:summaryModels} % hardwire, because we don't use real caption on that table.
