--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -217,7 +217,7 @@ The same benchmark parameters of the $t\bar t$ case could then be chosen.
 
 %\newthought{Implementation}
 %There are some subtleties to the Monte Carlo simulation relevant for
-%this case that are discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
+%this case that are discussed in Section~\ref{app:MonojetLikeModels_Appendix}.
 
 %In addition to the considerations discussed in the preceding subsections, very light DM fermions are included ($\mdm=10\,{\rm GeV}$) 
 %as this is a region where colliders have a complementary sensitivity to current direct detection experiments. 
