First attempt at fixing logic for EFT validity
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@337 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -29,26 +29,25 @@ constrain new confinement scales.
 %Even when the application of EFT is not appropriate for the prediction of kinematics 
 %or cross sections, it does predict specific final states and can motivate experimental searches.
 
+Ideally, experimental constraints should be shown as bounds of allowed signal events in the kinematic regions considered for 
+the search, as detailed in Appendix~\ref{app:Presentation_Of_Experimental_Results}. 
 A problematic situation is the attempt to derive a limit on
 nucleon-dark matter scattering cross sections from EFT results
-based on collider data.
+based on collider data~\footnote{Comparisons between constraints from different experiments 
+	meant to highlight their complementarity should be expressed as 
+	a function of the model parameters rather than on derived observables;
+	however this is a point that should be developed further after the conclusion of the work of this Forum.}. 
 Experiments that directly probe the nucleon-dark matter scattering cross section 
 are testing the regime of small momentum transfers, where the EFT approximation always holds.  
 Collider experiments, though, are sensitive to large momentum transfers: this is a regime where careful 
 treatment is necessary since the condition of applicability of the EFT may not hold~\footnote{
 Furthermore, mapping EFT results from high to low momentum requires particular care for some of the operators, 
 see Ref.~\cite{D'Eramo:2014aba} for a thorough discussion.}.
-The correct approach is to assess the applicability of EFT, not abandon it.
-
+Therefore, especially in the case when constraints from different experiments are compared, 
+we suggest to assess the applicability of EFT benchmark models, rather than abandon them.
 %As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
-Ideally, experimental constraints should be shown as bounds of allowed signal events in the kinematic regions considered for 
-the search, as detailed in Appendix~\ref{app:Presentation_Of_Experimental_Results}. 
-Comparisons between constraints from different experiments meant to highlight their complementarity should be expressed as 
-a function of the model parameters rather than on derived observables;
-however this is a point
-that should be developed further after the conclusion of the work of this Forum. 
-Until the various communities have agreed upon how to present this comparison, 
-collider results using contact interaction operators can be presented using one 
+%Until the various communities have agreed upon how to present this comparison, 
+We therefore suggest that collider results using contact interaction operators are presented using one 
 of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}
 that can be used to quote bounds on EFTs. 
 
