--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -262,7 +262,7 @@ ensure a given fraction of events within the range of applicability of the EFT a
 
 This report does not quantitatively consider constraints 
 'external' to the MET+X analyses coming from
-the LHC experiments themselves, such as searches for mediators decays,
+the LHC experiments themselves, such as searches for mediator decays,
 when choosing the points to be scanned in the parameter space of the models. 
 The main reason for not doing so in this report 
 is the difficulty of incorporating these constraints in a rigorous quantitative way within
