Added notice on running width
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@338 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -47,9 +47,10 @@ Therefore, especially in the case when constraints from different experiments ar
 we suggest to assess the applicability of EFT benchmark models, rather than abandon them.
 %As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
 %Until the various communities have agreed upon how to present this comparison, 
-We therefore suggest that collider results using contact interaction operators are presented using one 
-of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}
-that can be used to quote bounds on EFTs. 
+Therefore, whenever EFT models are used, collider experiments should always assess their applicability 
+using one 
+of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}, 
+especially when constraints from other experiments are compared.
 
 We first illustrate the problem that can arise with EFTs at colliders by considering an effective interaction
 $$ {\cal L}_\textrm{int} = (\bar\psi\gamma_\mu\psi)(\bar\chiDM\gamma^\mu\chiDM) {g\over \Lambda^2}$$
@@ -209,22 +210,6 @@ The resulting plots are shown in \cite{Racco:2015dxa} for a particular effective
 
 The advantage of this procedure is that the obtained bounds can be directly and easily recast in any  completion of the EFT, by computing the parameters \Mstar, \Mcut in the full model as functions of the parameters of the complete theory. On the other hand, the resulting limits will be weaker than those obtained using \Qtr and a specific UV completion.
 
-\subsection{Comments on unitarity considerations}
-\Todo{Waiting for input from J. Alcaraz}
-
-A further consideration applicable to EFT operators at hadron colliders
-is the potential violation of unitarity.  An analysis of the operator
-$\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
-provides the limit:
-\be
-\Mstar > \sqrt{s} \sqrt{ {\sqrt{3} \over 4 \pi} \beta(s) },
-\ee
-where $\sqrt{s}$ is (maximally) the collider energy and $\beta(s)$ is
-the DM velocity \cite{Shoemaker:2011vi}.
-Constraints for other operators have also been derived \cite{Endo:2014mja}.
-This constraint on \Mstar still is open to interpretation, since the
-relation to \Mcut is not resolved, except for a specific simplified model.
-
 \subsection{Consideration for shape analyses}
 
 If a search is not simply a counting experiment and exploits the shapes of kinematic distributions, any of the two conditions on the momentum transfer should be applied on the benchmarks using generator level information, by discarding events that are invalid, and the limit derived from
@@ -241,8 +226,11 @@ An example of the application of the two procedures to the limit on $M_*$ from R
 	\label{fig:monojet_MstarMmed}
 \end{figure}
 
+\subsection{Comments on unitarity considerations}
+\Todo{Waiting for input from J. Alcaraz}
+
 A further consideration applicable to EFT operators at hadron colliders
-is the potential violation of unitarity.   An analysis of the operator
+is the potential violation of unitarity.  An analysis of the operator
 $\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
 provides the limit:
 \be
@@ -337,7 +325,7 @@ is shown in Fig.~\ref{fig:EFT_kinematics}.
 \end{figure*}
 
 
-\Todo{We may get plots with a width.mass ratio of 0.05, which is closer to the minimal width.}
+%\Todo{We may get plots with a width.mass ratio of 0.05, which is closer to the minimal width.}
 
 As already observed in Section~\ref{sub:parameter_scan_monojet}, varying the DM mass changes the kinematics,
 both in the simplified model and in the EFT case. This can be seen in Fig.~\ref{fig:EFT_kinematics_mDM}. 
@@ -372,8 +360,8 @@ We therefore advise to add one grid scan point at very high mediator mass (10 \t
 for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. 
 %The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. 
 
-\Todo{The extrapolation to other couplings and mediator masses can be
-	done using the \Qtr prescription for that model. CD: I think this was Steve M - what do you mean?}
+%\Todo{The extrapolation to other couplings and mediator masses can be
+%	done using the \Qtr prescription for that model. CD: I think this was Steve M - what do you mean?}
 
 \subsection{EFT benchmarks with no corresponding simplified models}
 
