--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -88,21 +88,21 @@ signal samples and hence a threshold lower than 150 may be required.
 
 \end{enumerate}
 
-\Todo{Emanuele:``On the usage of fixed or running width. It is my opinion that one
-should use fixed widths. Although clearly there are limitations, I
-think this goes into the direction of making all as simple and
-transparent as possible. Moreover, all the discussions in the last
-months as well as the large majority of runs were done with fixed
-widths. Since there was some interest over the last couple of weeks,
-here is my suggestion for the POWHEG section.''}
-
-\Todo{Steve:  The reason I originally asked the question was because we saw about 20 years ago that there were cases when using this prescription was important.  Now, this is mainly for SM particles, but we apply it throughout for non-SM ones.   If we find no significant difference, then we can say it.  But, if we are starting from scratch, why shouldn't we include as much correct physics as we can?}
+%\Todo{Emanuele:``On the usage of fixed or running width. It is my opinion that one
+%	should use fixed widths. Although clearly there are limitations, I
+%	think this goes into the direction of making all as simple and
+%	transparent as possible. Moreover, all the discussions in the last
+%	months as well as the large majority of runs were done with fixed
+%	widths. Since there was some interest over the last couple of weeks,
+%	here is my suggestion for the POWHEG section.''}
+%
+%\Todo{Steve:  The reason I originally asked the question was because we saw about 20 years ago that there were cases when using this prescription was important.  Now, this is mainly for SM particles, but we apply it throughout for non-SM ones.   If we find no significant difference, then we can say it.  But, if we are starting from scratch, why shouldn't we include as much correct physics as we can?}
 
 %\begin{itemize}
 \item Remove the \runningwidth keyword, or set it to 0, which is the
   default value. Running with fixed widths is the recommended
   option. Although there are limitations, this is the more
-  straightforward, simple and transparent option, and it was used for
+  straightforward, simple and transparent option, and it was used for these
   Forum studies. 
 
   While not recommended, the alternative, a running width for the
