--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -6,11 +6,11 @@ does for signal simulations. Nevertheless, also for signal samples theoretical u
 
 In this chapter, we provide technical details on how theoretical systematic uncertainties can be assessed for events generated with \powheg and \madgraph.
 
-\Todo{This section describes the technical details of how to vary
-  input parameters, but it does not describe the overall strategy of
-  what parameters to vary or by how much. SL.: We are not going to reach a conclusion on this; we could still have a pdf recommendation, maybe?
-  {\bf [Comment on proper PDF sets to use, concerns about sea quark PDF in b-initiated diagrams (perhaps the latter belongs in the b-flavored DM section]}
-  }
+%\Todo{This section describes the technical details of how to vary
+%  input parameters, but it does not describe the overall strategy of
+%  what parameters to vary or by how much. SL.: We are not going to reach a conclusion on this; we could still have a pdf recommendation, maybe?
+%  {\bf [Comment on proper PDF sets to use, concerns about sea quark PDF in b-initiated diagrams (perhaps the latter belongs in the b-flavored DM section]}
+%  }
 
 
 \section{POWHEG}
